# fastapi

./: dockerfile  pyproject.toml  requirements.txt  sql_app.db
app/: database.py  main.py  models.py
