[tool.poetry]
name = "api-docker"
version = "0.1.0"
description = ""
authors = ["Fatima EL JATTIOUI <fjattioui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
